--- a/Commanda/Commanda/Pages/MenuPage.xaml
+++ b/Commanda/Commanda/Pages/MenuPage.xaml
@@ -4,9 +4,17 @@
              x:Class="Commanda.Pages.MenuPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="Lista de Productos"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
+            <StackLayout
+        Orientation="Horizontal">
+                <ListView x:Name="lstMenu"
+                  HorizontalOptions="FillAndExpand"
+                  VerticalOptions="Center"
+                  ItemTapped="ItemTapped">
+                </ListView>
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
